include/electionguard/group.h

typedef struct eg_element_mod_p_s eg_element_mod_p_t;
EG_API eg_electionguard_status_t eg_element_mod_p_new(const uint64_t in_data[MAX_P_LEN],
                                                      eg_element_mod_p_t **out_handle);
EG_API eg_electionguard_status_t eg_element_mod_p_new_unchecked(const uint64_t in_data[MAX_P_LEN],
                                                                eg_element_mod_p_t **out_handle);
EG_API eg_electionguard_status_t eg_element_mod_p_new_bytes(uint8_t *in_data, uint64_t in_size,
                                                            eg_element_mod_p_t **out_handle);
EG_API eg_electionguard_status_t eg_element_mod_p_free(eg_element_mod_p_t *handle);
EG_API eg_electionguard_status_t eg_element_mod_p_get_data(eg_element_mod_p_t *handle,
                                                           uint64_t **out_data, uint64_t *out_size);
EG_API eg_electionguard_status_t eg_element_mod_p_is_valid_residue(eg_element_mod_p_t *modp,
                                                                   bool *out_value);
EG_API eg_electionguard_status_t eg_element_mod_p_is_in_bounds(eg_element_mod_p_t *modp,
                                                               bool *out_value);
EG_API eg_electionguard_status_t eg_element_mod_p_to_bytes(eg_element_mod_p_t *handle,
                                                           uint8_t **out_bytes, uint64_t *out_size);
EG_API eg_electionguard_status_t eg_element_mod_p_to_hex(eg_element_mod_p_t *handle,
                                                         char **out_hex);
EG_API eg_electionguard_status_t eg_element_mod_p_from_hex_checked(char *in_hex,
                                                                   eg_element_mod_p_t **out_handle);
EG_API eg_electionguard_status_t
eg_element_mod_p_from_hex_unchecked(char *in_hex, eg_element_mod_p_t **out_handle);
typedef struct eg_element_mod_q_s eg_element_mod_q_t;
EG_API eg_electionguard_status_t eg_element_mod_q_new(const uint64_t in_data[MAX_Q_LEN],
                                                      eg_element_mod_q_t **out_handle);
EG_API eg_electionguard_status_t eg_element_mod_q_new_unchecked(const uint64_t in_data[MAX_Q_LEN],
                                                                eg_element_mod_q_t **out_handle);
EG_API eg_electionguard_status_t eg_element_mod_q_new_bytes(uint8_t *in_data, uint64_t in_size,
                                                            eg_element_mod_q_t **out_handle);
EG_API eg_electionguard_status_t eg_element_mod_q_free(eg_element_mod_q_t *handle);
EG_API eg_electionguard_status_t eg_element_mod_q_get_data(eg_element_mod_q_t *handle,
                                                           uint64_t **out_data, uint64_t *out_size);
EG_API eg_electionguard_status_t eg_element_mod_q_to_hex(eg_element_mod_q_t *handle,
                                                         char **out_hex);
EG_API eg_electionguard_status_t eg_element_mod_q_to_bytes(eg_element_mod_q_t *handle,
                                                           uint8_t **out_bytes, uint64_t *out_size);
EG_API eg_electionguard_status_t eg_element_mod_q_from_hex_checked(char *in_hex,
                                                                   eg_element_mod_q_t **out_handle);
EG_API eg_electionguard_status_t
eg_element_mod_q_from_hex_unchecked(char *in_hex, eg_element_mod_q_t **out_handle);
EG_API eg_electionguard_status_t eg_element_mod_q_from_uint64(uint64_t in_uint64,
                                                              eg_element_mod_q_t **out_handle);
EG_API eg_electionguard_status_t
eg_element_mod_q_from_uint64_unchecked(uint64_t in_uint64, eg_element_mod_q_t **out_handle);
EG_API eg_electionguard_status_t eg_element_mod_p_from_uint64(uint64_t in_uint64,
                                                              eg_element_mod_p_t **out_handle);
EG_API eg_electionguard_status_t
eg_element_mod_p_from_element_mod_q(eg_element_mod_q_t *in_handle, eg_element_mod_p_t **out_handle);
EG_API eg_electionguard_status_t
eg_element_mod_p_from_uint64_unchecked(uint64_t in_uint64, eg_element_mod_p_t **out_handle);
EG_API eg_electionguard_status_t eg_element_mod_q_rand_q_new(eg_element_mod_q_t **out_handle);