bindings/netstandard/ElectionGuard/ElectionGuard.Encryption/NativeInterface.cs

using System;
using System.Runtime.ConstrainedExecution;
using System.Runtime.InteropServices;
// ReSharper disable InconsistentNaming

namespace ElectionGuard
{
    internal static unsafe class NativeInterface
    {
        internal const string DllName = "electionguard";

        internal struct CharPtr { };

        #region Collections

        internal static class LinkedList
        {
            internal struct LinkedListType { };

            internal class LinkedListHandle
                : ElectionGuardSafeHandle<LinkedListType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = LinkedList.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"LinkedList Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_linked_list_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(out LinkedListHandle handle);

            [DllImport(DllName, EntryPoint = "eg_linked_list_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(LinkedListType* handle);

            [DllImport(DllName, EntryPoint = "eg_linked_list_append",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Append(
                LinkedListHandle handle,
                [MarshalAs(UnmanagedType.LPStr)] string key,
                [MarshalAs(UnmanagedType.LPStr)] string value);

            [DllImport(DllName, EntryPoint = "eg_linked_list_delete_last",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status DeleteLast(LinkedListHandle handle);

            [DllImport(DllName, EntryPoint = "eg_linked_list_get_count",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetCount(
                LinkedListHandle handle);

            [DllImport(DllName, EntryPoint = "eg_linked_list_get_element_at",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetElementAt(
                LinkedListHandle handle,
                ulong position,
                out IntPtr key,
                out IntPtr value);

            [DllImport(DllName, EntryPoint = "eg_linked_list_get_value_at",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetValueAt(
                LinkedListHandle handle,
                ulong position,
                out IntPtr value);
        }

        #endregion

        #region Group

        internal static class ElementModP
        {
            internal struct ElementModPType { };

            internal class ElementModPHandle
                : ElectionGuardSafeHandle<ElementModPType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = ElementModP.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"ElementModP Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_element_mod_p_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                ulong* in_data, out ElementModPHandle handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_p_new_unchecked",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status NewUnchecked(
                ulong* in_data, out ElementModPHandle handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_p_new_bytes",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status NewBytes(
                byte* in_data, ulong length, out ElementModPHandle handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_p_from_uint64",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromUint64(
                UInt64 uint64,
                out ElementModPHandle handle);


            [DllImport(DllName, EntryPoint = "eg_element_mod_p_from_uint64_unchecked",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromUint64Unchecked(
                UInt64 uint64,
                out ElementModPHandle handle);


            [DllImport(DllName, EntryPoint = "eg_element_mod_p_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(ElementModPType* handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_p_get_data",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetData(
                ElementModPHandle handle, ulong** out_data, out ulong out_size);

            [DllImport(DllName, EntryPoint = "eg_element_mod_p_to_hex",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToHex(
                ElementModPHandle handle, out IntPtr data);

            [DllImport(DllName, EntryPoint = "eg_element_mod_p_from_hex_checked",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromHexChecked(
                [MarshalAs(UnmanagedType.LPStr)] string hex,
                out ElementModPHandle handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_p_from_hex_unchecked",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromHexUnchecked(
                [MarshalAs(UnmanagedType.LPStr)] string hex,
                out ElementModPHandle handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_p_to_bytes",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToBytes(
                ElementModPHandle handle, out IntPtr data, out ulong size);

            [DllImport(DllName, EntryPoint = "eg_element_mod_p_is_valid_residue",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status IsValidResidue(ElementModPHandle data, out bool isValid);

            [DllImport(DllName, EntryPoint = "eg_element_mod_p_is_in_bounds",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status IsInBounds(ElementModPHandle data, out bool inBounds);
        }

        internal static class ElementModQ
        {
            internal struct ElementModQType { };

            internal class ElementModQHandle
                : ElectionGuardSafeHandle<ElementModQType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = ElementModQ.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"ElementModQ Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_element_mod_q_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                ulong* in_data, out ElementModQHandle handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_q_new_unchecked",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status NewUnchecked(
                ulong* in_data, out ElementModQHandle handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_q_new_bytes",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status NewBytes(
                byte* in_data, ulong length, out ElementModQHandle handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_q_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(ElementModQType* handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_q_get_data",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetData(
                ElementModQHandle handle, ulong** out_data, out ulong out_size);

            [DllImport(DllName, EntryPoint = "eg_element_mod_q_to_bytes",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToBytes(
                ElementModQHandle handle, out IntPtr data, out ulong size);

            [DllImport(DllName, EntryPoint = "eg_element_mod_q_to_hex",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToHex(
                ElementModQHandle handle, out IntPtr out_hex);

            [DllImport(DllName, EntryPoint = "eg_element_mod_p_from_element_mod_q",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status ToElementModP(
                ElementModQHandle handle, out ElementModP.ElementModPHandle out_handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_q_from_hex_checked",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromHexChecked(
                [MarshalAs(UnmanagedType.LPStr)] string hex,
                out ElementModQHandle handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_q_from_hex_unchecked",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromHexUnchecked(
                [MarshalAs(UnmanagedType.LPStr)] string hex,
                out ElementModQHandle handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_q_from_uint64",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromUint64(
                UInt64 uint64,
                out ElementModQHandle handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_q_from_uint64_unchecked",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status FromUint64Unchecked(
                UInt64 uint64,
                out ElementModQHandle handle);

            [DllImport(DllName, EntryPoint = "eg_element_mod_q_rand_q_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Random(out ElementModQHandle handle);
